--- a/PartII/0016-3.1-Introduction-to-the-Spring-IoC-container-and-beans.md
+++ b/PartII/0016-3.1-Introduction-to-the-Spring-IoC-container-and-beans.md
@@ -1,10 +1,8 @@
-## 3.1 Introduction to the Spring IoC container and beans
+## 3.1 Spring IoC 容器和 Bean 介绍
 
-This chapter covers the Spring Framework implementation of the Inversion of Control \(IoC\)[\[1\]](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#ftn.d5e680)principle. IoC is also known as_dependency injection_\(DI\). It is a process whereby objects define their dependencies, that is, the other objects they work with, only through constructor arguments, arguments to a factory method, or properties that are set on the object instance after it is constructed or returned from a factory method. The container then_injects_those dependencies when it creates the bean. This process is fundamentally the inverse, hence the name_Inversion of Control_\(IoC\), of the bean itself controlling the instantiation or location of its dependencies by using direct construction of classes, or a mechanism such as the_Service Locator_pattern.
+关于 IoC 概念的解释可以参考 [2.1 依赖注入和控制反转](../PartI/0003-2.1-Dependency-Injection-and-Inversion-of-Control.md)。
 
-The`org.springframework.beans`and`org.springframework.context`packages are the basis for Spring Framework’s IoC container. The[`BeanFactory`](http://docs.spring.io/spring-framework/docs/5.0.0.M4/javadoc-api/org/springframework/beans/factory/BeanFactory.html)interface provides an advanced configuration mechanism capable of managing any type of object.[`ApplicationContext`](http://docs.spring.io/spring-framework/docs/5.0.0.M4/javadoc-api/org/springframework/context/ApplicationContext.html)is a sub-interface of`BeanFactory`. It adds easier integration with Spring’s AOP features; message resource handling \(for use in internationalization\), event publication; and application-layer specific contexts such as the`WebApplicationContext`for use in web applications.
+Spring IoC 容器的基础是 `org.springframework.beans` 包和 `org.springframework.context` 包，其核心是 `BeanFactory` 接口，它为 Spring 提供了实例化、配置以及管理 Bean（对象）的机制。但大多数时候我们并不是直接使用 `BeanFactory`，而是 `ApplicationContext`， 它是一个对 `BeanFactory` 的实现，`ApplicationContext` 更容易与 Spring 的 AOP 集成，并添加了一系列“框架”特性，如国际化消息资源处理，事件传播等，以及提供了针对特定应用层的上下文，如用于 Web 应用程序的 `WebApplicationContext`。
 
-In short, the`BeanFactory`provides the configuration framework and basic functionality, and the`ApplicationContext`adds more enterprise-specific functionality. The`ApplicationContext`is a complete superset of the`BeanFactory`, and is used exclusively in this chapter in descriptions of Spring’s IoC container. For more information on using the`BeanFactory`instead of the`ApplicationContext,`refer to[Section 3.16, “The BeanFactory”](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-beanfactory).
-
-In Spring, the objects that form the backbone of your application and that are managed by the Spring IoC_container_are called_beans_. A bean is an object that is instantiated, assembled, and otherwise managed by a Spring IoC container. Otherwise, a bean is simply one of many objects in your application. Beans, and the_dependencies_among them, are reflected in the_configuration metadata_used by a container.
+在 Spring 中，构成应用程序主体并由 Spring IoC 容器管理的对象称为 Bean。Bean 由 Spring IoC 容器实例化、配置并管理的对象，也属于应用程序中诸多对象之一。Bean 之间的依赖关系通过容器使用的配置元数据来描述。
 
