--- a/PartII/0016-3.1-Introduction-to-the-Spring-IoC-container-and-beans.md
+++ b/PartII/0016-3.1-Introduction-to-the-Spring-IoC-container-and-beans.md
@@ -4,5 +4,5 @@
 
 Spring IoC 容器的基础是 `org.springframework.beans` 包和 `org.springframework.context` 包，其核心是 `BeanFactory` 接口，它为 Spring 提供了实例化、配置以及管理 Bean（对象）的机制。但大多数时候我们并不是直接使用 `BeanFactory`，而是 `ApplicationContext`， 它是一个对 `BeanFactory` 的实现，`ApplicationContext` 更容易与 Spring 的 AOP 集成，并添加了一系列“框架”特性，如国际化消息资源处理，事件传播等，以及提供了针对特定应用层的上下文，如用于 Web 应用程序的 `WebApplicationContext`。
 
-在 Spring 中，构成应用程序主体并由 Spring IoC 容器管理的对象称为 Bean。Bean 由 Spring IoC 容器实例化、配置并管理的对象，也属于应用程序中诸多对象之一。Bean 之间的依赖关系通过容器使用的配置元数据来描述。
+在 Spring 中，构成应用程序主体并由 Spring IoC 容器管理的对象称为 Bean。Bean 是由 Spring IoC 容器实例化、配置并管理的对象，也属于应用程序中诸多对象之一。Bean 之间的依赖关系通过容器使用的配置元数据（如 XML 配置文件、 注解等）来描述。
 
